app/components/collections/collections.scss
$collections-container-width: 793px;

.pageWrapper {
  background-color: $gray0;
}

.contentWrapper {
  margin-top: $navbar_height;
  min-height: calc(100vh - #{$navbar_height} - #{$footer-height});
}

.container {
  position: relative;
  margin: 0 auto;
  width: $collections-container-width;
}

.header {
  position: relative;
  display: flex;
  align-items: center;
  font-size: 20px;
  font-weight: bold;
  line-height: 1.4;
  color: $black0;
  padding-top: 44px;
  padding-bottom: 18px;
  border-bottom: 1px solid rgba(187, 194, 208, 0.5);

  .titleBox {
    display: flex;
    align-items: center;

    span {
      display: inline-block;
      vertical-align: top;
    }
  }

  .collectionCount {
    font-size: 18px;
    font-weight: bold;
    line-height: 1.33;
    color: $main_blue0;
    margin-left: 8px;
  }

  .rightBox {
    position: absolute;
    top: 44px;
    right: 0;
    bottom: 0;
  }
}

.newCollectionBtnWrapper {
  @include small-action-button($gray6);
  height: 30px;
  background-color: transparent;

  .plusIcon {
    margin-right: 4px;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 20px;
    height: 20px;

    svg {
      width: 12px;
      height: 12px;
    }
  }
}

.collectionItem {
  position: relative;
  padding: 16px;
  border-radius: 4px;
  background-color: white;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.05);

  .title {
    display: inline-block;
    vertical-align: top;
    font-size: 26px;
    font-weight: bold;
    line-height: 1.38;
    color: $navy0;
    margin-right: 80px;
    margin-bottom: 9px;
  }

  .titleBox {
    position: relative;
  }

  .collectionControlBox {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
  }

  .controlIconWrapper {
    display: inline-block;
    width: 32px;
    height: 32px;
    border-radius: 4px;
    cursor: pointer;
    opacity: 0;
    transition: opacity 0.2s ease-in-out;
    color: $gray5;
    margin-right: 8px;

    &:hover {
      color: $gray6;
    }
  }

  .controlIcon {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 32px;
    height: 32px;
    border-radius: 4px;
    background-color: $gray0;

    svg {
      display: inline-block;
      vertical-align: top;
      width: 20px;
      height: 20px;
    }
  }

  .description {
    font-size: 18px;
    line-height: 1.33;
    color: $black0;
    margin-bottom: 13px;
    word-break: break-all;
    white-space: pre-wrap;
  }

  .subInformation {
    white-space: pre-wrap;

    span {
      display: inline-block;
      vertical-align: top;
      line-height: 1.43;
      font-size: 14px;
      color: $gray6;
    }

    span > b {
      font-weight: bold;
    }
  }

  &:hover {
    .controlIconWrapper {
      opacity: 1;
    }
  }
}

.collectionListWrapper {
  margin: 0;
  padding: 0;
  list-style: none;
  margin-top: 24px;
  margin-bottom: 80px;
}

.collectionItem + .collectionItem {
  margin-top: 16px;
}

